2008-01-31  Michael Hutchinson  <mhutchinson@novell.com> 

	* AspNetEdit.mdp:
	* configure:
	* AspNetEdit.make: Get AspNetEdit building again.
	
	* AspNetEdit.Editor.UI/RootDesignerView.cs: 
	* AspNetEdit.Integration/GeckoWebBrowser.cs: Copy simple code so that 
	  we don't have to depend on another unstable addin.
	
	* AspNetEdit.addin.xml:
	* AspNetEdit.Integration/AspNetEditViewContent.cs: Check that the 
	  Mozilla extension is installed,and if not, install it.
	
	* chrome/Makefile.am:
	* chrome/aspdesigner.manifest.in: Unneeded, removed.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.addin.xml: Update MD version.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.mdp: Updated.
	* AspNetEdit.addin.xml: Changed add-in category.

2007-12-17  Lluis Sanchez Gual <lluis@novell.com> 

	* configure: Updated versions to 0.18.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.addin.xml: Bump add-in versions.

2007-12-05  Lluis Sanchez Gual <lluis@novell.com> 

	* configure: Use bash to run the config scripts.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.mdp, AspNetEdit.make: Updated project files.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.mdp, configure, AspNetEdit.mds, Makefile.include, rules.make,
	  Makefile.am, AspNetEdit.make, Makefile: Directory reorganization.

2007-11-30  Michael Hutchinson <mhutchinson@novell.com> 

	* AspNetEdit.mdp, AspNetEdit.Editor.UI/RootDesignerView.cs, Makefile.am:
	  Depend on GeckoWebBrowser now that the MozillaControl has beeen removed
	  from core.

2007-11-05  Michael Hutchinson <mhutchinson@novell.com> 

	* AspNetEdit.Integration/AspNetEditViewContent.cs,
	  AspNetEdit.Integration/MonoDevelopProxy.cs: Fix build.

2007-11-02  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.Integration/MonoDevelopProxy.cs: Use RootCombine instead of
	  CurrentOpenCombine when possible.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 
