@@ -1,3 +1,11 @@
+2008-02-26  Michael Hutchinson  <mhutchinson@novell.com> 
+
+	* AspNetEdit.Integration/AspNetEditDisplayBinding.cs:
+	* AspNetEdit.Editor.Persistence/ServerControlParsingObject.cs:
+	* AspNetEdit.Editor.Persistence/DesignTimeParser.cs:
+	* AspNetEdit.Editor.Persistence/ParsingObject.cs:
+	Track namespace changes in MonoDevelop.Aspnet.
+
 2008-01-31  Michael Hutchinson  <mhutchinson@novell.com> 
 
 	* AspNetEdit.mdp:
